11 May 2005 Menelaos Karavelas
- undo last change in Delaunay_triangulation_2

10 May 2005 Menelaos Karavelas
- added a necessary #include in Triangulation_utils_2 (needed for defining
  CGAL_triangulation_precondition)
- added missing template parameter of Triangulation_data_structure_2
  when defining default value of template parameter Tds in
  Delaunay_triangulation_2

22 February Andreas Fabri
- Removed derivation of vertex and face class in TDS

18 February 2005 Sylvain Pion
- doc : Regular_filtered_traits was not included, oops.

18 February 2005 Mariette
-fixed the doc of TriangulationDSFaceBase_2 concept

18 February 2005 Mariette
-fixed the doc of TriangulationVertexBase_2 concept

09   February 2005 Mariette
- removed the doc of the destructor of Tds_2

09   February 2005 Mariette
- removed the doc of the destructor of Triangulation_2
- fixed the precondition in the doc of the Line_face_circulator


07 February 2005 Mariette
-fixed a bug in Line_face_circulator

03 January 2005 Mariette
- fix documentation of index fonctions in concept TriangulationDSFaceBase_2.
 
23 December 2004 Mariette
- fixed assert in Constrained_triangulation_plus_2.h

20 December 2004 Sylvain Pion
- Add quotes to <img src="..."> in the doc, ortherwise images are not copied.

19 December 2004 Sylvain Pion
- -DNDEBUG fixes.

18 December 2004 Sylvain Pion
- Fix headers of demo files.

14 decembre 2004
- doc : fix figure in html

24 November 2004 Sylvain Pion
- doc : Use bdty-tcgal-00 from geom.bib.

19 novembre Mariette
 - fixed typo in doc file : Delaunay_triangulation_2.tex

8 November Andreas Fabri
- In Triangulation_hierarchy_2: Treat special case that the triangulation in 
  higher levels is 1D and the point to insert collinear

8 noovembre
- made nearest_vertex(p,f) function in Delaunay triangulation conforms
  to the documentation that is f is assumed to be just a hint for point 
  location.

19 octobre 2004 Mariette