@@ -1,3 +1,6 @@
+17 June 2005 Menelaos Karavelas
+- added nearest_power_vertex functionality in regular triangulation
+
 11 May 2005 Menelaos Karavelas
 - undo last change in Delaunay_triangulation_2
 
